fixed #369 text alignment on reporting rates titles

--- a/packages/kujua-reporting/css/base.less
+++ b/packages/kujua-reporting/css/base.less
@@ -24,8 +24,8 @@
     color: @grey;
     .droid;
     font-weight: 300;
-    margin: .5em;
-    white-space: nowrap;
+    margin: 1.5em 0 0 0;
+    line-height: 1.5em;
 }
 
 #totals {
@@ -337,7 +337,7 @@
 .page-header {
     .reporting {
         .controls {
-            float: left;
+            position: absolute;
             padding-top: 5px;
         }
         .nav.facilities {
@@ -349,7 +349,6 @@
         }
         h1 {
             text-align: center;
-            margin-right: 10px;
         }
     }
 }
